--- a/sample/index.html
+++ b/sample/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>pixigamlelib sample 1</title>
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 
 <body>
